--- a/hw2/conf/engine.conf
+++ b/hw2/conf/engine.conf
@@ -4,6 +4,8 @@
 # corpus_prefix: data/simple
 corpus_prefix: data/wiki
 
+prf_prefix: data/PRF
+
 index_prefix: data/index
 
 ## Additional group-specific options can be added
@@ -14,6 +16,6 @@ index_prefix: data/index
 
 ## Switch this to inverted-doconly or inverted-compressed
 # indexer_type: fullscan
-#indexer_type: inverted-doconly
+indexer_type: inverted-doconly
 # indexer_type: inverted-compressed
- indexer_type: inverted-occurrence
+# indexer_type: inverted-occurrence
